2.4.0 - added jvn nojvm dist, memory optimization and resize issue fixed